<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingsActivity">

    <TextView
        android:id="@+id/text_view_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textStyle="bold"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/text_view_konstanta"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/konstanta_tekanan_dalam_1_atm"
        android:textSize="@dimen/sp_18"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/textColorPrimary"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/text_view_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_konstanta"/>

    <TextView
        android:id="@+id/text_view_default_konstanta"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        tools:text="@string/defaultnya_1_01325_bar"
        app:layout_constraintTop_toBottomOf="@id/text_view_konstanta"
        app:layout_constraintStart_toStartOf="@id/text_view_konstanta"
        app:layout_constraintEnd_toEndOf="@id/text_view_konstanta"/>

    <ImageButton
        android:id="@+id/btn_edit_konstanta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pencil"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="@id/text_view_konstanta"
        app:layout_constraintBottom_toBottomOf="@id/text_view_konstanta"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>