<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageButton
        android:id="@+id/img_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_setting"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_konverter"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/textColorPrimaryDark"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_setting"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_delta_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/delta_pressure"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/dp_16"
        android:elevation="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_delta_temperature"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/btn_delta_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/delta_temperature"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/poppins_medium"
        android:elevation="@dimen/dp_16"
        android:textSize="@dimen/sp_18"
        android:padding="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/btn_delta_pressure"
        app:layout_constraintStart_toStartOf="@id/btn_delta_pressure"
        app:layout_constraintEnd_toEndOf="@id/btn_delta_pressure"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>